--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/server.js",
+    "start": "NODE_ENV=production node ./src/server.js",
     "dev": "nodemon ./src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "node-pg-migrate"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,10 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
+    "dotenv": "^16.4.5",
     "joi": "^17.13.3",
-    "nanoid": "^3.3.7"
+    "nanoid": "^3.3.7",
+    "node-pg-migrate": "^7.7.1",
+    "pg": "^8.13.1"
   }
 }
